# armour

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  consumer.py  producer.py  ticket.py
app/aes/: __init__.py
example/: client.py  server.py
src/relock/: __init__.py
src/relock/gcm/: __init__.py
src/relock/http/: __init__.py
src/relock/siv/: __init__.py
src/relock/tcp/: __init__.py  base.py  pool.py
src/relock/ticket/: __init__.py
src/relock/xdh/: __init__.py
